syntax = "proto3";

package kratos.demo.errors;

import "kratos/api/annotations.proto";

// 多语言特定包名，用于源代码引用
option go_package = "github.com/go-kratos/kratos/demo/errors;errors";
option java_multiple_files = true;
option java_package = "com.github.kratos.demo.errors";
option objc_class_prefix = "KratosDemoErrors";

enum Helloworld {
    option (kratos.api.errors) = true;

    MissingName = 0;
}
